reduce letter spacing - resolve #46

--- a/wp-content/themes/daoma/source/css/_base.scss
+++ b/wp-content/themes/daoma/source/css/_base.scss
@@ -46,7 +46,7 @@ h1, h2, h3, h4, h5, h6{
 }
 h1{
   font-size: em(70);
-  letter-spacing: 5px;
+  letter-spacing: 3px;
   @media screen and (min-width: 30em) and (max-width: 40em){ font-size: em(48); }
   @media screen and (min-width:20em) and (max-width: 29.999em){ font-size: em(36); }
 }
